--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -14,62 +14,50 @@
 <h2>Attributes</h2>
 <p>non-closable - static (optional). Hides the close button.</p>
 
-<section class="content">
-
-  <div class="content-item">
-    <div>Alert with description (no close button)</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-alert>
-          <div>Your settings have been successfully saved.</div>
-        </ui-alert>
-      </div>
-      <div class="example-code">
-
+<h3>Alert with description (no close button)</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-alert>
+      <div>Your settings have been successfully saved.</div>
+    </ui-alert>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-alert&gt;
   &lt;div&gt;Your settings have been successfully saved.&lt;/div&gt;
 &lt;/ui-alert&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Alert with label and description</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-alert>
-          <h3>Update Complete</h3>
-          <div>Your settings have been successfully saved.</div>
-        </ui-alert>
-      </div>
-      <div class="example-code">
-
+<h3>Alert with label and description</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-alert>
+      <h3>Update Complete</h3>
+      <div>Your settings have been successfully saved.</div>
+    </ui-alert>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-alert&gt;
   &lt;h3&gt;Update Complete&lt;/h3&gt;
   &lt;div&gt;Your settings have been successfully saved.&lt;/div&gt;
 &lt;/ui-alert&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Alert with label, description, and icon</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-alert>
-          <ui-icon name="info"></ui-icon>
-          <h3>Update Complete</h3>
-          <div>Your settings have been successfully saved.</div>
-        </ui-alert>
-      </div>
-      <div class="example-code">
-
+<h3>Alert with label, description, and icon</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-alert>
+      <ui-icon name="info"></ui-icon>
+      <h3>Update Complete</h3>
+      <div>Your settings have been successfully saved.</div>
+    </ui-alert>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-alert&gt;
   &lt;ui-icon name="info"&gt;&lt;/ui-icon&gt;
@@ -77,9 +65,5 @@
   &lt;div&gt;Your settings have been successfully saved.&lt;/div&gt;
 &lt;/ui-alert&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-
-</section>
+</div>
