--- a/docs/components/input.html
+++ b/docs/components/input.html
@@ -11,44 +11,36 @@
 <p>clearable - static (optional). Adds a clear button to the component.</p>
 <p>shape - static (optional). Default: rounded. Available options: rounded, pill, square. Sets the corner style.</p>
 
-<section class="content">
-
-  <div class="content-item">
-    <div>Default</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-input>
-          <input />
-        </ui-input>
-      </div>
-      <div class="example-code">
-
+<h3>Default</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-input>
+      <input />
+    </ui-input>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-input&gt;
   &lt;input /&gt;
 &lt;/ui-input&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Shape (default: rounded)</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-input shape="rounded">
-          <input />
-        </ui-input>
-        <ui-input shape="pill">
-          <input />
-        </ui-input>
-        <ui-input shape="square">
-          <input />
-        </ui-input>
-      </div>
-      <div class="example-code">
-
+<h3>Shape (default: rounded)</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-input shape="rounded">
+      <input />
+    </ui-input>
+    <ui-input shape="pill">
+      <input />
+    </ui-input>
+    <ui-input shape="square">
+      <input />
+    </ui-input>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-input shape="rounded"&gt;
   &lt;input /&gt;
@@ -62,89 +54,69 @@
   &lt;input /&gt;
 &lt;/ui-input&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Clear button</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-input clearable>
-          <input />
-        </ui-input>
-      </div>
-      <div class="example-code">
-
+<h3>Clear button</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-input clearable>
+      <input />
+    </ui-input>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-input clearable&gt;
   &lt;input /&gt;
 &lt;/ui-input&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Required</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-input>
-          <input required />
-        </ui-input>
-      </div>
-      <div class="example-code">
-
+<h3>Required</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-input>
+      <input required />
+    </ui-input>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-input&gt;
   &lt;input required /&gt;
 &lt;/ui-input&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Placeholder</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-input>
-          <input placeholder="Placeholder" />
-        </ui-input>
-      </div>
-      <div class="example-code">
-
+<h3>Placeholder</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-input>
+      <input placeholder="Placeholder" />
+    </ui-input>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-input&gt;
   &lt;input placeholder="Placeholder" /&gt;
 &lt;/ui-input&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Disabled + Placeholder</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-input>
-          <input placeholder="Disabled" disabled />
-        </ui-input>
-      </div>
-      <div class="example-code">
-
+<h3>Disabled + Placeholder</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-input>
+      <input placeholder="Disabled" disabled />
+    </ui-input>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-input&gt;
   &lt;input placeholder="Disabled" disabled /&gt;
 &lt;/ui-input&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-
-</section>
+</div>
