--- a/docs/components/select.html
+++ b/docs/components/select.html
@@ -13,72 +13,52 @@
 <p>icon - static (init-only, optional). Default: arrow-down-small.</p>
 <p>shape - static (optional). Default: rounded. Available options: rounded, pill, square. Sets the corner style.</p>
 
-<section class="content">
-
-  <div class="content-item">
-    <div>Default</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-select id="select00"></ui-select>
-      </div>
-      <div class="example-code">
-
+<h3>Default</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-select id="select00"></ui-select>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-select&gt;&lt;/ui-select&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Shape</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-select shape="rounded"></ui-select>
-        <ui-select shape="square"></ui-select>
-        <ui-select shape="pill"></ui-select>
-      </div>
-      <div class="example-code">
-
+<h3>Shape</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-select shape="rounded"></ui-select>
+    <ui-select shape="square"></ui-select>
+    <ui-select shape="pill"></ui-select>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-select&gt;&lt;/ui-select&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>With Placeholder and Disabled option</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-select placeholder="Select" id="select01"></ui-select>
-      </div>
-      <div class="example-code">
-
+<h3>With Placeholder and Disabled option</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-select placeholder="Select" id="select01"></ui-select>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-select placeholder="Select"&gt;&lt;/ui-select&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Disabled</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-select disabled></ui-select>
-      </div>
-      <div class="example-code">
-
+<h3>Disabled</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-select disabled></ui-select>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-select disabled&gt;&lt;/ui-select&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-
-</section>
+</div>
