--- a/docs/components/textarea.html
+++ b/docs/components/textarea.html
@@ -6,96 +6,80 @@
 <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
 <p>shape - static (optional). Default: rounded. Available options: rounded, square. Sets the corner style.</p>
 
-<section class="content">
-
-  <div class="content-item">
-    <div>Default</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-textarea></ui-textarea>
-      </div>
-      <div class="example-code">
+<h3>Default</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-textarea></ui-textarea>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-textarea&gt;&lt;/ui-textarea&gt;
 </code></pre>
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Rounded</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-textarea rounded="none"></ui-textarea>
-      </div>
-      <div class="example-code">
+<h3>Rounded</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-textarea rounded="none"></ui-textarea>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-textarea rounded="none"&gt;&lt;/ui-textarea&gt;
 </code></pre>
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Required</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-textarea required></ui-textarea>
-      </div>
-      <div class="example-code">
+<h3>Required</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-textarea required></ui-textarea>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-textarea required&gt;&lt;/ui-textarea&gt;
 </code></pre>
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Placeholder</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-textarea>
-          <textarea placeholder="Placeholder"></textarea>
-        </ui-textarea>
-      </div>
-      <div class="example-code">
+<h3>Placeholder</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-textarea>
+      <textarea placeholder="Placeholder"></textarea>
+    </ui-textarea>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-textarea placeholder="Placeholder"&gt;&lt;/ui-textarea&gt;
 </code></pre>
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Disabled + Placeholder</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-textarea placeholder="Disabled" disabled></ui-textarea>
-      </div>
-      <div class="example-code">
+<h3>Disabled + Placeholder</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-textarea placeholder="Disabled" disabled></ui-textarea>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-textarea placeholder="Disabled" disabled&gt;&lt;/ui-textarea&gt;
 </code></pre>
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Disabled + Value</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-textarea>
-          <textarea disabled>Disabled</textarea>
-        </ui-textarea>
-      </div>
-      <div class="example-code">
+<h3>Disabled + Value</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-textarea>
+      <textarea disabled>Disabled</textarea>
+    </ui-textarea>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-textarea&gt;
   &lt;textarea disabled&gt;Disabled&lt;/textarea&gt;
 &lt;/ui-textarea&gt;
 </code></pre>
-      </div>
-    </div>
   </div>
-
-</section>
+</div>
