--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -86,45 +86,57 @@ body{
   line-height:var(--line-height-default);
 }
 
-h1,h2,h3,h4,h5,h6{
+:is(h1,h2,h3,h4,h5,h6){
   margin:0;
   color:var(--heading-color);
   font-family:var(--font-family-heading);
   font-style:var(--font-style-normal);
 }
 
-h1,h2,h3{font-weight:var(--font-weight-semibold);}
-h4,h5,h6{font-weight:var(--font-weight-medium);}
+:is(h1,h2,h3){font-weight:var(--font-weight-semibold);}
+:is(h4,h5,h6){font-weight:var(--font-weight-medium);}
+
+:is(h1,h2,h3,h4,h5,h6) ~ :is(h2,h3,h4,h5,h6){
+  margin-block-start:calc(2.5rem * var(--scaling));
+}
 
 h1{
-  font-size:calc(2.5rem * var(--scaling));
   line-height:1.1;
+  font-size:calc(2.5rem * var(--scaling));
+  margin-block-end:calc(1rem * var(--scaling));
 }
 
 h2{
-  font-size:calc(2rem * var(--scaling));
   line-height:1.15;
+  font-size:calc(2rem * var(--scaling));
+  margin-block-end:calc(0.875rem * var(--scaling));
 }
 
 h3{
-  font-size:calc(1.5rem * var(--scaling));
   line-height:1.2;
+  font-size:calc(1.5rem * var(--scaling));
+  margin-block-end:calc(0.75rem * var(--scaling));
 }
 
 h4{
-  font-size:calc(1.25rem * var(--scaling));
   line-height:1.25;
+  font-size:calc(1.25rem * var(--scaling));
+  margin-block-end:calc(0.625rem * var(--scaling));
 }
 
 h5{
-  font-size:calc(1.125rem * var(--scaling));
   line-height:1.3;
+  font-size:calc(1.125rem * var(--scaling));
+  margin-block-end:calc(0.5rem * var(--scaling));
 }
 
 h6{
-  font-size:calc(1rem * var(--scaling));
   line-height:1.35;
+  font-size:calc(1rem * var(--scaling));
+  margin-block-end:calc(0.375rem * var(--scaling));
 }
+
+
 
 p{
   margin:0;
