--- a/docs/components/icon.html
+++ b/docs/components/icon.html
@@ -7,21 +7,15 @@
 <h2>Attributes</h2>
 <p>name - reactive (required). Specifies the name of the icon to display.</p>
 
-<section class="content">
-  <div class="content-item">
-    <div>Icon</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-icon name="home" id="example-icon"></ui-icon>
-        <button onclick="changeIconName()">Reactivity</button>
-      </div>
-      <div class="example-code">
-
+<h3>Default</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-icon name="home" id="example-icon"></ui-icon>
+    <button onclick="changeIconName()">Reactivity</button>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-icon name="home"&gt;&lt;/ui-icon&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-</section>
+</div>
