--- a/docs/components/radio.html
+++ b/docs/components/radio.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<h3>Sizes: small, medium (default), large</h3>
+<h3>Sizes</h3>
 <div class="example">
   <div class="example-preview">
     <ui-radio data-size="small"></ui-radio>
