--- a/docs/components/separator.html
+++ b/docs/components/separator.html
@@ -14,40 +14,28 @@
 <p>--separator-spacing:0;</p>
 <p>--separator-color:var(--line-color);</p>
 
-<section class="content">
-
-  <div class="content-item">
-    <div>Horizontal</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-separator></ui-separator>
-      </div>
-      <div class="example-code">
-
+<h3>Horizontal</h3>
+<div class="example">
+  <div class="example-preview">
+    <ui-separator></ui-separator>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-separator&gt;&lt;/ui-separator&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
+</div>
 
-  <div class="content-item">
-    <div>Vertical (parent container: display: flex | grid)</div>
-    <div class="example">
-      <div class="example-preview">
-        <div class="visual-block" style="width:30px;height:60px;"></div>
-        <ui-separator orientation="vertical"></ui-separator>
-        <div class="visual-block" style="width:30px;height:30px;"></div>
-      </div>
-      <div class="example-code">
-
+<h3>Vertical</h3>
+<div class="example">
+  <div class="example-preview">
+    <div class="visual-block" style="width:30px;height:60px;"></div>
+    <ui-separator orientation="vertical"></ui-separator>
+    <div class="visual-block" style="width:30px;height:30px;"></div>
+  </div>
+  <div class="example-code">
 <pre><code>
 &lt;ui-separator orientation="vertical"&gt;&lt;/ui-separator&gt;
 </code></pre>
-
-      </div>
-    </div>
   </div>
-
-</section>
+</div>
