--- a/docs/components/spinner.html
+++ b/docs/components/spinner.html
@@ -6,15 +6,14 @@
   <li><a href="#icon">ui-icon</a></li>
 </ul>
 
+<h3>Default</h3>
 <div class="example">
   <div class="example-preview">
     <ui-spinner></ui-spinner>
   </div>
   <div class="example-code">
-
 <pre><code>
 &lt;ui-spinner&gt;&lt;/ui-spinner&gt;
 </code></pre>
-
   </div>
 </div>
