--- a/docs/components/switch.html
+++ b/docs/components/switch.html
@@ -4,8 +4,8 @@
 <h2>Attributes</h2>
 <p>aria-label - static (required). Must be set manually.</p>
 <p>checked - reactive (required). Default: false. Controls the checked state of the component.</p>
-<p>disabled - reactive (optional). Controls the disabled state of the component.</p>
 <p>required - static (optional). Indicates whether the component is required.</p>
+<p>disabled - reactive (optional). Controls the disabled state of the component.</p>
 
 <h3>Default</h3>
 <div class="example">
@@ -34,7 +34,7 @@
   </div>
 </div>
 
-<h3>Size: small | medium (default) | large</h3>
+<h3>Sizes</h3>
 <div class="example">
   <div class="example-preview">
     <ui-switch checked data-size="small"></ui-switch>
@@ -46,18 +46,6 @@
 &lt;ui-switch data-size="small"&gt;&lt;/ui-switch&gt;
 &lt;ui-switch data-size="medium"&gt;&lt;/ui-switch&gt;
 &lt;ui-switch data-size="large"&gt;&lt;/ui-switch&gt;
-</code></pre>
-  </div>
-</div>
-
-<h3>Rounded: none</h3>
-<div class="example">
-  <div class="example-preview">
-    <ui-switch checked data-rounded="none"></ui-switch>
-  </div>
-  <div class="example-code">
-<pre><code>
-&lt;ui-switch data-rounded="none"&gt;&lt;/ui-switch&gt;
 </code></pre>
   </div>
 </div>
